--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ nav > ul > li:not(:last-child){
 .house-wrap{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 32px;
 }
@@ -412,11 +413,311 @@ footer{
     .homes-num-wrap > li{
         margin-bottom: 20px;
         width: 275px;
-        height: 157px;
-        line-height: 2;
+        margin-right: 20px;
+        padding: 70px 72px;
+    }
+    .homes-num-wrap > li > a > p:first-of-type{
+        margin-bottom: 0;
+    }
+    .help-card-list{
+        padding: 0 40px;
+    }
+    .homes-num-wrap > li:nth-child(1),
+    .homes-num-wrap > li:nth-child(3){
+        margin-right: 20px;
+    }
+    .homes-num-wrap > li:nth-child(2),
+    .homes-num-wrap > li:nth-child(4){
+        margin-right: 0;
+    }
+    .status-search-box{
+        width: 60%;
+        padding: 14px 4px;
+    }
+    .status-search-box > input{
+        width: calc(100% - 125px);
+        font-size: 16px;
+        padding-left: 12px;
+    }
+    .status-search-box > input::placeholder{
+        font-size: 14px;
+    }
+    .status-search-box > a{
+        font-size: 14px;
+    }
+}
+@media screen and (max-width:980px){
+    .login-box{
+        display: none;
+    }
+    .m-text-box > h1{
+        font-size: 36px;
+    }
+    .m-text-box > p{
+        font-size: 16px;
+    }
+    .search-wrap{
+        width: 576px;
+        height: 53px;
+    }
+    .banner-nav{
+        display: none;
+    }
+    .search-img-box{
+        width: 43px;
+        height: 43px;
+    }
+    .search-img-box > img{
+        padding: 11px;
+    }
+    .search-wrap > input,
+    .search-wrap > input::placeholder{
+        font-size: 16px;
+    }
+    .search-cities-list{
+        padding: 0 120px;
+    }
+    .search-cities-list > li > a{
+        font-size: 14px;
+        line-height: 1.2;
+    }
+    .house-wrap{
+        padding: 0 230px;
+    }
+    .house-wrap > li{
+        margin-right: 0;
+    }
+    .house-wrap > li:not(:last-child){
+        margin-right: 0;
+    }
+    .search-cities-box{
+        display: none;
+    }
+    .section2 h2{
+        font-size: 30px;
+    }
+    .what-text{
+        font-size: 14px;
+    }
+    .malibu-text{
+        font-size: 20px;
+    }
+    .homes-num-wrap > li{
+        padding: 40px 42px;
+    }
+    .status-box > p:first-child{
+        font-size: 30px;
+    }
+    .status-box > p:last-of-type{
+        font-size: 16px;
+    }
+    .help-card-list{
+        padding: 0 60px;
+    }
+    .help-card-box:last-child{
         margin-right: 20px;
     }
 }
-@media screen and (max-width:1100px){
-
+@media screen and (max-width:710px){
+    .login-box{
+        display: none;
+    }
+    .search-wrap{
+        display: none;
+    }
+    .m-text-box > h1{
+        font-size: 26px;
+    }
+    .m-text-box > p{
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+    .section2 h2{
+        font-size: 23px;
+    }
+    .what-text{
+        font-size: 12px;
+        margin-bottom: 64px;
+    }
+    .malibu-text{
+        display: none;
+    }
+    .homes-num-wrap > li:nth-child(1), .homes-num-wrap > li:nth-child(3){
+        margin-right: 0;
+    }
+    .homes-num-wrap > li > a > p:first-of-type{
+        font-size: 30px;
+    }
+    .homes-num-wrap > li > a > p:last-of-type{
+        font-size: 14px;
+    }
+    .house-wrap{
+        padding: 0 115px;
+    }
+    .help-card-text-wrap > p{
+        font-size: 18px;
+    }
+    .room-box > p,
+    .room-box > p > span{
+        font-size: 14px;
+    }
+    .room-box > p > span{
+        margin-left: 3px;
+    }
+    .address-text{
+        font-size: 14px !important;
+    }
+    .continue-text{
+        display: none;
+    }
+    .status-box > p:first-child{
+        font-size: 23px;
+    }
+    .status-box > p:last-of-type{
+        font-size: 13px;
+    }
+    .footer-img-box{
+        display: none;
+    }
+    .footer-list-wrap{
+        padding: 0 160px;
+    }
+    .footer-list-wrap > ul:not(:last-child){
+        margin-right: 0;
+    }
+    .footer-list-wrap > ul:not(:last-child){
+        margin-right: 90px;
+    }
+}
+@media screen and (max-width:709px){
+    .search-wrap{
+        display: none;
+    }
+    .m-text-box > h1{
+        font-size: 26px;
+    }
+    .m-text-box > p{
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+    .section2 h2{
+        font-size: 23px;
+    }
+    .what-text{
+        font-size: 12px;
+        margin-bottom: 64px;
+    }
+    .malibu-text{
+        display: none;
+    }
+    .homes-num-wrap > li:nth-child(1), .homes-num-wrap > li:nth-child(3){
+        margin-right: 0;
+    }
+    .homes-num-wrap > li > a > p:first-of-type{
+        font-size: 30px;
+    }
+    .homes-num-wrap > li > a > p:last-of-type{
+        font-size: 14px;
+    }
+    .house-wrap{
+        padding: 0 115px;
+    }
+    .help-card-text-wrap > p{
+        font-size: 18px;
+    }
+    .room-box > p,
+    .room-box > p > span{
+        font-size: 14px;
+    }
+    .room-box > p > span{
+        margin-left: 3px;
+    }
+    .address-text{
+        font-size: 14px !important;
+    }
+    .status-box > p:first-child{
+        font-size: 23px;
+    }
+    .status-box > p:last-of-type{
+        font-size: 13px;
+    }
+    .footer-img-box{
+        display: none;
+    }
+    .footer-list-wrap{
+        padding: 0 160px;
+    }
+    .footer-list-wrap > ul:not(:last-child){
+        margin-right: 0;
+    }
+    .footer-list-wrap > ul:not(:last-child){
+        margin-right: 90px;
+    }
+}
+@media screen and (max-width:609px){
+    .m-text-box > h1{
+        font-size: 22px;
+    }
+    .m-text-box > p{
+        font-size: 12px;
+    }
+    .what-text{
+        display: none;
+    }
+    .help-text{
+        font-size: 26px;
+    }
+    .house-wrap{
+        padding: 0 60px;
+    }
+    .status-box > p:first-child{
+        margin-bottom: 30px;
+    }
+    .status-box > p:last-of-type{
+        display: none;
+    }
+}
+@media screen and (max-width:509px){
+    .section1{
+        margin: 0 20px;
+    }
+    .m-text-box > h1{
+        font-size: 15px;
+        margin-bottom: 0;
+    }
+    .m-text-box > p{
+        display: none;
+    }
+    .section2 h2{
+        font-size: 20px;
+    }
+    .house-wrap{
+        padding: 0 50px;
+    }
+    .section3{
+        padding: 0;
+    }
+    .section4{
+        display: none;
+    }
+    .help-text{
+        font-size: 30px;
+    }
+    .help-card-box{
+        margin: 0;
+    }
+    .footer-list-wrap{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+    .footer-list-wrap > ul:not(:last-child){
+        margin-right: 0;
+    }
+    .footer-list-wrap > ul:not(:last-child){
+        margin-bottom: 3px;
+    }
+    /* .footer-list-wrap > ul > li:not(:first-child){
+        display: none;
+    } */
 }
